# Racisticana

./: bot.py  main.py  pyproject.toml
cogs/: base_cog.py  company.py  economy.py  moderation.py
data/: companies.json  timeout_logs.json  transaction_requests.json  users.json
utils/: config.py  database.py  quests.py
